--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-	<title></title>
+	<title>Excerpts From Select Public Domain Books</title>
 </head>
 <body>
+	<h1></h1>
+	<table>
+	</table>
+	<h2></h2>
 </body>
 </html>
